crates/sdk/tests/macros/error_init_without_attr.stderr
error: (calimero)> method named `init` must be annotated with `#[app::init]`
  --> tests/macros/error_init_without_attr.rs:10:12
   |
10 |     pub fn init() -> Self {
   |            ^^^^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyState`
 --> tests/macros/error_init_without_attr.rs:6:8
  |
6 | struct MyState;
  |        ^^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyState`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`
